--- a/tools/dev_links.html
+++ b/tools/dev_links.html
@@ -1,8 +1,16 @@
 <hr>
 <hr>
-<a href="init_admin.php">Init Admin</a>
- - 
 <a href=".">Main</a>
  - 
 <hr>
+Change login user
+<a href="#" onClick="document.getElementsByName ('username')[0].value = 'admin';document.getElementsByName ('password')[0].value = 'password';">admin</a>
+-
+<a href="#" onClick="document.getElementsByName ('username')[0].value = 'user1';document.getElementsByName ('password')[0].value = 'password';">user1</a>
+-
 <hr>
+<hr>
+
+<script>
+    
+</script>
